@@ -33,6 +33,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   when using contacts) are emptied
 - In MeetingItem.getPrettyLink, take isPrivacyViewable into account
 - Use our own JS jQuery collapsible management instead Plone's one
+- In the @@object_goto view, take care of not sending a user to an item he has no access because of MeetingItem.isPrivacyViewable.
+  If a next/previous/first/last item is not accessible, user is redirected to the closest accessible item
 
 4.1b10 (2018-05-22)
 -------------------
